--- a/404.html
+++ b/404.html
@@ -1,6 +1,3 @@
----
-permalink: /404/
----
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -40,7 +37,7 @@ permalink: /404/
         <meta property="og:title" content="Page Not Found | London Web Design & Development | Sybiltec" />
         <meta property="og:description" content="Sybil Mayard provides web development services 
         for SMEs in Shopify, Squarespace, WordPress and Wix. Contact me for a free consultation or website review." />
-        <meta property="og:url" content="https://sybiltec.com/404/" />
+        <meta property="og:url" content="https://sybiltec.com/404" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
@@ -115,7 +112,7 @@ permalink: /404/
         }
         }
         </script>
-        <link rel="canonical" href="https://sybiltec.com/404/" />
+        <link rel="canonical" href="https://sybiltec.com/404" />
         <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">    
     </head>
