--- a/blog-2.html
+++ b/blog-2.html
@@ -33,7 +33,7 @@ permalink: /blog-2/
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Blog Page 2 | Web Designer Erith South East London</title>       
         <meta name="Description" content="Sybiltec provides website development and e-commerce services for SMEs. Read my blog posts to learn about the latest industry news and company updates.">
-        <meta name="robots" content="noindex">
+        <meta name="robots" content="all">
         <link rel="canonical" href="https://sybiltec.com/blog-2/">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
