--- a/blog.html
+++ b/blog.html
@@ -33,7 +33,7 @@ permalink: /blog/
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Blog | Web Designer Erith South East London | Sybiltec</title>       
         <meta name="Description" content="Sybiltec provides website design services in the South East London areaa. Read my blog posts to keep yourself updated with industry news and company updates.">
-        <meta name="robots" content="noindex">
+        <meta name="robots" content="all">
         <link rel="canonical" href="https://sybiltec.com/blog/">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
