Various SEO improvements

--- a/index.html
+++ b/index.html
@@ -99,9 +99,6 @@
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png"> 
     </head>
     <body>
-        <div class="announcement-bar">
-            <a href="https://sybiltec.com/web-design-bexley/">Click Here for Subsidised Web Design Services for Bexley Businesses</a>
-        </div>
         <div class="header">
                 <div class="container-1140">
                     <div class="row">
@@ -283,7 +280,7 @@
                             <img src="https://sybiltec.com/images/logos/wan&co.webp" alt="Wan&Co logo">
                         </div>
                         <h4>Maddie</h4>
-                        <p class="center">Founder,<br>Wan&Co</p>
+                        <p class="center">Founder,<br>Wan&amp;Co</p>
                     </div>
                     <div class="mySlides fade">
                         <q>Great big thanks to Sybil for supporting Eat Club with its IT audit and further systems' migration. Sybil was professional and supported us through this journey, making sure everything was completed according to the original plan. Thank you also for your patience as this was not a straightforward project.</q>
@@ -510,14 +507,8 @@
                                 <i class="fa-brands fa-youtube"></i></a>
                         </p>
                         <p>
-                            <a href="https://www.uksmallbusinessdirectory.co.uk/" rel="noopener noreferrer" target="_blank"><img src="https://www.uksmallbusinessdirectory.co.uk/links/uksbd-100.png" alt="Business Directory"></a>
-                        </p> 
-                        <p>
-                            <a href="https://www.bexley.org.uk/web-designers/" rel="noopener noreferrer" target="_blank"><img alt="Bexley Web Designers" src="https://www.bexley.org.uk/Images/LinkLogos/Small/Bexley.gif" /></a>
+                            <a href="https://www.uksmallbusinessdirectory.co.uk/bid/284687/" rel="noopener noreferrer" target="_blank"><img src="https://www.uksmallbusinessdirectory.co.uk/links/uksbd-100.png" alt="Business Directory"></a>
                         </p>      
-                        <p>
-                            <a href="https://www.bigreddirectory.com"><img src="https://www.bigreddirectory.com/hp/images/link1.gif" alt="UK opening hours" width="200" height="46" border="0"></a>
-                        </p>         
                     </div>
                 </div>
             </div>
