--- a/importance-of-contact-information-on-your-website.html
+++ b/importance-of-contact-information-on-your-website.html
@@ -141,9 +141,6 @@ permalink: /importance-of-contact-information-on-your-website/
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">    
     </head>
     <body>
-        <div class="announcement-bar">
-            <a href="https://sybiltec.com/web-design-bexley/">Click Here for Subsidised Web Design Services for Bexley Businesses</a>
-        </div>
         <div class="header">
                 <div class="container-1140">
                     <div class="row">
@@ -290,14 +287,8 @@ permalink: /importance-of-contact-information-on-your-website/
                                 <i class="fa-brands fa-youtube"></i></a>
                         </p>
                         <p>
-                            <a href="https://www.uksmallbusinessdirectory.co.uk/" rel="noopener noreferrer" target="_blank"><img src="https://www.uksmallbusinessdirectory.co.uk/links/uksbd-100.png" alt="Business Directory"></a>
-                        </p> 
-                        <p>
-                            <a href="https://www.bexley.org.uk/web-designers/" rel="noopener noreferrer" target="_blank"><img alt="Bexley Web Designers" src="https://www.bexley.org.uk/Images/LinkLogos/Small/Bexley.gif" /></a>
-                        </p>      
-                        <p>
-                            <a href="https://www.bigreddirectory.com"><img src="https://www.bigreddirectory.com/hp/images/link1.gif" alt="UK opening hours" width="200" height="46" border="0"></a>
-                        </p>                      
+                            <a href="https://www.uksmallbusinessdirectory.co.uk/bid/284687/" rel="noopener noreferrer" target="_blank"><img src="https://www.uksmallbusinessdirectory.co.uk/links/uksbd-100.png" alt="Business Directory"></a>
+                        </p>                   
                     </div>
                 </div>
             </div>
