--- a/index2.html
+++ b/index2.html
@@ -194,128 +194,62 @@
                     <div class="col-3"><img src="images/clients/tech-diplomacy-academy.jpg" alt="Tech Diplomacy Academy"><p class="customer">Tech Diplomacy Academy</p></div>
                 </div>
             </div>
-            <a class="btn-secondary padding-top" href="https://sybiltec.com/clients/">See All Clients >></a>
+            <div class="center padding-bottom padding-top"><a class="btn-secondary padding-top" href="https://sybiltec.com/clients/">See All Clients >></a></div>
         </div>
-        <div class="events section">
-            <div class="container-1140 padding-top">
-                <h2 class="center">Why Choose Me as Your Web Designer?</h2>
-                <hr>
+        <div class="section grey">
+            <div class="container-1140 padding-top padding-bottom">
                 <div class="row">
-                    <div class="col-6">
-                        <i class="fa-regular fa-circle-check"></i><h3>Attention to Detail</h3>
-                        <p>I'll scrutinise every detail to make sure everything is just right. You will be presented with a pixel-perfect design.</p>
-                        <i class="fa-regular fa-circle-check"></i><h3>Personalised Services</h3>
-                        <p>Unlike working with an agency, you'll be working directly with myself, providing you with a truly personalised customer service.</p>
+                    <div class="col-4"><h2>Why Choose Us</h2></div>
+                    <div class="col-4"><i class="fa-regular fa-square-check"></i></i><h3>Attention to Detail</h3>
+                        <p>We'll scrutinise every detail to make sure everything is just right. You will be presented with a pixel-perfect design.</p></div>
+                    <div class="col-4"><i class="fa-regular fa-comment-dots"></i><h3>Jargon-free Communication</h3>
+                        <p>We won't bore you with the technical details. Expect to receive clear and quick responses from us.</p></div>
+                </div>
+                <div class="row">
+                    <div class="col-4"></div>
+                    <div class="col-4"><i class="fa-solid fa-medal"></i><h3>Demonstrable Track Record</h3>
+                        <p>Over the last 4 years, we've worked with over 30 small businesses from within a range of industry sectors to improve their online presence.</p></div>
+                    <div class="col-4"><i class="fa-solid fa-earth-americas"></i><h3>International Coverage</h3>
+                        <p>Is your business based outside of the UK? No problem - we have successfully worked with several international customers.</p></div>
+                </div>
+            </div>
+        </div>
+        <div class="testimonials section container-1140">
+            <h2 class="center">What Customers Say</h2>
+            <hr>
+            <div class="row">
+                <div class="col-6">
+                    <div class="testimonial-card">
+                        <img src="" class="avatar">
+                        <p><strong>Natalie Wright, Finance Director, LD Tiling Contractors</strong></p>
+                        <p>Fantastic service!</p>
                     </div>
-                    <div class="col-6">
-                        <i class="fa-regular fa-circle-check"></i><h3>A Range of Experiences</h3>
-                        <p>I've developed a wide variety of skills through diverse work experiences, ranging from music production to managing a start-up.</p>
-                        <i class="fa-regular fa-circle-check"></i><h3>Demonstrable Track Record</h3>
-                        <p>Over the last 3 years, I've helped over 25 small businesses from within a wide range of industry sectors to improve their online presence.</p>
+                </div>
+                <div class="col-6">
+                    <div class="testimonial-card">
+                        <img src="" class="avatar">
+                        <p><strong>Natalie Wright, Finance Director, LD Tiling Contractors</strong></p>
+                        <p>Fantastic service!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-6">
+                    <div class="testimonial-card">
+                        <img src="" class="avatar">
+                        <p><strong>Natalie Wright, Finance Director, LD Tiling Contractors</strong></p>
+                        <p>Fantastic service!</p>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="testimonial-card">
+                        <img src="" class="avatar">
+                        <p><strong>Natalie Wright, Finance Director, LD Tiling Contractors</strong></p>
+                        <p>Fantastic service!</p>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="testimonials section grey">
-            <div class="container-1000">
-                <p class="center"><i class="fa-regular fa-comments"></i></p>
-                <h2 class="center">My Happy Clients!</h2>
-                <hr>
-                <p class="center">See the testimonials below to read about my clients' experience of working with me as their web designer. All customers are delighted with my services; as a result, many choose me to be their trusted partner for working together on a long-term basis.</p>
-                <!-- Slideshow container -->
-                <div class="slideshow-container">
-                    <!-- Full-width slides/quotes -->
-                    <div class="mySlides fade">
-                        <q>As a first-time business owner, setting up a website felt like a challenge. But, Sybil made it look so effortless. She is a highly skilled website designer and assisted me in bringing my creative vision to life. I would recommend her to anyone wanting to build a website.</q>
-                        <div class="center">
-                            <img src="https://sybiltec.com/images/logos/wan&co.webp" alt="Wan&Co logo">
-                        </div>
-                        <h4>Maddie</h4>
-                        <p class="center">Founder,<br>Wan&Co</p>
-                    </div>
-                    <div class="mySlides fade">
-                        <q>Great big thanks to Sybil for supporting Eat Club with its IT audit and further systems' migration. Sybil was professional and supported us through this journey, making sure everything was completed according to the original plan. Thank you also for your patience as this was not a straightforward project.</q>
-                        <div class="center">
-                            <img src="https://sybiltec.com/images/logos/eat-club.gif" alt="Eat Club logo">
-                        </div>
-                        <h4>Ruth Soroko</h4>
-                        <p class="center">Chief Executive,<br>Eat Club</p>
-                    </div>
-                    <div class="mySlides fade">
-                        <q>Sybil is a highly skilled developer whom I had the pleasure of working with on a small landing pages project. I would highly recommend Sybil to anyone in need of a professional-looking website, especially if they're unsure where to begin.</q>
-                        <h4>Hany Abdelkhalek</h4>
-                    </div>
-                    <div class="mySlides fade">
-                        <q>Sybil was reliable and really supportive throughout the making of my website. She was flexible and made sure she understood what I wanted to get out of my website and what my values were. She listened to my ideas for the design but also gave me clear information and advice, and suggested options I didn't know about. I am really happy with the final result and would wholeheartedly recommend Sybil to anyone who needs a website and wants it to have a professional look but is not sure where to start.</q>
-                        <h4>Aurore Lacabe</h4>
-                    </div>
-                    <div class="mySlides fade">
-                        <q>The final product is sleek, clean and professional looking. Sybil listened, did not impose a 'manufactured easy to do template' webpage on us. She managed our expectations beautifully and delivered a service which is best characterised by 'above and beyond'. Sybil simply delivered; she certainly commits her knowledge, skill and innovative entrepreneurial mind to benefit for her customer.</q>
-                        <div class="center">
-                            <img src="https://sybiltec.com/images/logos/nerowireart.png" alt="Nerowireart logo">
-                        </div>
-                        <h4>Dr Zita Stone</h4>
-                        <p class="center">Founder,<br>Nerowireart</p>
-                    </div>
-                    <div class="mySlides fade">
-                        <q>Sybil is totally client-focused. She morphs design and technical knowledge beautifully. She produces such high quality websites whilst being able to commit to deadlines. Sybil works so hard to bring clients bespoke websites! I am so happy with the support I received and over the moon with the way my website looks! I have been recommending Sybil to everyone and won't stop! She's amazing!</q>
-                        <div class="center">
-                            <img src="https://sybiltec.com/images/logos/happily-clappily-ever-laughter-logo.png" alt="Happily Clappily Ever Laughter logo">
-                        </div>
-                        <h4>Patricia Byrne</h4>
-                        <p class="center">CEO,<br>Happily Clappily Ever Laughter</p>
-                    </div>
-                    <div class="mySlides fade">
-                        <q>It was a pleasure to work with Sybil to create my Shopify website. She has excellent technical skills and she is very client-oriented: she always communicated so I had regular updates on what was achieved and estimated timelines to manage my expectations. She is always looking to improve and is a very hard worker. I would recommend her to anyone looking for a partner to nail their website!</q>
-                        <div class="center">
-                            <img src="https://sybiltec.com/images/logos/KYOSK-Logo.png" alt="KYOSK logo">
-                        </div>
-                        <h4>Shaheen Javid</h4>
-                            <p class="center">CEO,<br>KYOSK</p>
-                    </div>
-                    <div class="mySlides fade">
-                        <q>Sybil is a diligent professional, who is not only highly knowledgeable, but is also a delight to work with! She provided my organisation with a website audit and I was thrilled with the results! The audit was very clearly laid out so I knew exactly what to do to rectify issues, thanks to her plain English non-technical explanations. I would highly recommend Sybil's services to anyone!</q>
-                        <div class="center">
-                            <img src="https://sybiltec.com/images/logos/Focus-on-Learning-logo.png" alt="Focus on Learning logo">
-                        </div>
-                        <h4>Freddie Ryder</h4>
-                        <p class="center">CEO,<br>
-                            Focus on Learning</p>
-                    </div>
-                    <div class="mySlides fade">
-                        <q>I have been working with Sybil for some time now on a range of digital service projects. I would recommend her, she is hard working, highly skilled and manages to communicate digital service issues in a way that makes them jargon-free and understandable. She has delivered all the work she has taken on for us within the agreed timescale and within budget. Her work is of a high quality.</q>
-                        <div class="center">
-                            <img src="https://sybiltec.com/images/logos/Future-Communities-UK-Logo.png" alt="Future Communities UK logo">
-                        </div>
-                        <h4>Gary Parker</h4>
-                        <p class="center">Director,<br>
-                            Future Communities UK</p>
-                    </div>
-                    <div class="mySlides fade">
-                        <q>Sybil is extremely thorough and professional, she pays great attention to details and she will adapt to your specific needs. She has helped me choose a platform for my domain name and website and is now helping me build the actual website for my business. I will definitely recommend Sybil to anyone wanting a high quality, personalised and reasonably priced service. Her work is top class!</q>
-                        <div class="center">
-                            <img src="https://sybiltec.com/images/logos/Audrey-Zeitoun-Coaching-Logo.png" alt="Audrey Zeitoun Coaching logo">
-                        </div>
-                        <h4>Audrey Zeitoun</h4>
-                        <p class="center">Life Transitions Coach,<br>
-                            Audrey Zeitoun Coaching</p>
-                    </div>
-                    <!-- Next and previous buttons -->
-                    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                    <a class="next" onclick="plusSlides(1)">&#10095;</a>
-                    <!-- Dots/bullets/indicators -->
-                    <div class="dot-container">
-                        <span class="dot" onclick="currentSlide(1)"></span>
-                        <span class="dot" onclick="currentSlide(2)"></span>
-                        <span class="dot" onclick="currentSlide(3)"></span>
-                        <span class="dot" onclick="currentSlide(4)"></span>
-                        <span class="dot" onclick="currentSlide(5)"></span>
-                        <span class="dot" onclick="currentSlide(6)"></span>
-                        <span class="dot" onclick="currentSlide(7)"></span>
-                    </div>
-                </div>
-                </div>
-            </div>
         <div class="blog section">
             <div class="container-1140 padding-top">
                 <div class="center">
@@ -373,7 +307,7 @@
             </div>
         </div>
         </div>
-        <div class="partners section center">
+        <div class="partners section center grey">
             <div class="container-1140">
                 <h2>Partners</h2>
                 <hr>
@@ -458,14 +392,8 @@
                                 <i class="fa-brands fa-youtube"></i></a>
                         </p>
                         <p>
-                            <a href="https://www.uksmallbusinessdirectory.co.uk/" rel="noopener noreferrer" target="_blank"><img src="https://www.uksmallbusinessdirectory.co.uk/links/uksbd-100.png" alt="Business Directory"></a>
-                        </p> 
-                        <p>
-                            <a href="https://www.bexley.org.uk/web-designers/" rel="noopener noreferrer" target="_blank"><img alt="Bexley Web Designers" src="https://www.bexley.org.uk/Images/LinkLogos/Small/Bexley.gif" /></a>
+                            <a href="https://www.uksmallbusinessdirectory.co.uk/bid/284687/" rel="noopener noreferrer" target="_blank"><img src="https://www.uksmallbusinessdirectory.co.uk/links/uksbd-100.png" alt="Business Directory"></a>
                         </p>      
-                        <p>
-                            <a href="https://www.bigreddirectory.com"><img src="https://www.bigreddirectory.com/hp/images/link1.gif" alt="UK opening hours" width="200" height="46" border="0"></a>
-                        </p>         
                     </div>
                 </div>
             </div>
